Changes on - Package json (run script) and added some css styles

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/ederdeivid/qcx-frontend-challenge.git",
   "author": "Eder Deivid <ederdeivid89@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "gulp"
+  },
   "dependencies": {
     "axios": "^0.21.1"
   },
