--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.3.0",
-    "webpack": "^5.11.1"
+    "html-webpack-plugin": "^4.5.1",
+    "webpack": "^5.11.1",
+    "webpack-stream": "^6.1.1"
   }
 }
